--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,7 @@ node_js:
   - "10"
   - "11"
 
-cache:
-  directories:
-    - node_modules
+cache: npm
 
 addons:
   apt:
@@ -17,7 +15,7 @@ addons:
     - g++-4.8
 
 before_install:
-  - npm i -g npm@6.6.0
+  - npm i -g npm@6.7.0
 
 install:
   - export CXX="g++-4.8"
