--- a/package.json
+++ b/package.json
@@ -1,46 +1,26 @@
 {
   "name": "isle-editor",
-  "productName": "ISLE Editor",
   "version": "0.20.0",
   "description": "Editor for Integrated Statistics Learning Environment (ISLE) lessons.",
-  "main": "main.js",
-  "bin": {
-    "isle-editor": "./bin/cli.js",
-    "isle-bundler": "./app/bundler/bin/cli.js"
-  },
-  "scripts": {
-    "analyze": "source-map-explorer dist/renderer.prod.js dist/renderer.prod.js.map",
-    "clean": "rm -rf node_modules",
-    "update-docs": "cross-env NODE_PATH=./node_modules/@stdlib/stdlib/lib/node_modules node ./scripts/update_docs.js",
-    "test": "jest",
-    "coverage": "jest && codecov",
-    "lint": "eslint app test *.js && stylelint \"app/**/*.css\"",
-    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
-    "build": "npm run build-main && npm run build-renderer",
-    "start": "cross-env NODE_ENV=production electron ./",
-    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r @babel/register package.js",
-    "package-all": "npm run package -- --all",
-    "init-docs": "gitbook install",
-    "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
-    "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
-    "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
-    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./main.development.js"
-  },
-  "jest": {
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true,
-    "testURL": "http://localhost/",
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/mocks/file_mock.js",
-      "\\.(css|less)$": "<rootDir>/test/mocks/style_mock.js"
-    }
+  "keywords": [
+    "concepts",
+    "e-learning",
+    "education",
+    "electron",
+    "interactive",
+    "machine learning",
+    "react",
+    "statistcs"
+  ],
+  "homepage": "https://github.com/isle-project/isle-editor#readme",
+  "bugs": {
+    "url": "https://github.com/isle-project/isle-editor/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/isle-project/isle-editor.git"
   },
+  "license": "Apache-2.0",
   "author": {
     "name": "Philipp Burckhardt",
     "email": "pburckhardt@outlook.com",
@@ -67,56 +47,39 @@
       "url": "https://github.com/Phalanstere"
     }
   ],
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/isle-project/isle-editor/issues"
+  "main": "main.js",
+  "bin": {
+    "isle-bundler": "./app/bundler/bin/cli.js",
+    "isle-editor": "./bin/cli.js"
   },
-  "keywords": [
-    "statistcs",
-    "machine learning",
-    "concepts",
-    "education",
-    "e-learning",
-    "interactive",
-    "electron",
-    "react"
-  ],
-  "homepage": "https://github.com/isle-project/isle-editor#readme",
-  "devDependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.2.0",
-    "babel": "^6.5.2",
-    "babel-eslint": "^10.0.0",
-    "babel-polyfill": "^6.26.0",
-    "codecov": "^3.0.2",
-    "concurrently": "^4.0.0",
-    "del": "^3.0.0",
-    "doctrine": "^3.0.0",
-    "electron": "4.0.4",
-    "electron-packager": "13.0.1",
-    "enzyme": "3.8.0",
-    "eslint": "^5.13.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jest": "^22.2.2",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.0.1",
-    "gh-pages": "^2.0.0",
-    "gitbook-cli": "^2.3.0",
-    "happypack": "^5.0.1",
-    "hard-source-webpack-plugin": "^0.13.1",
-    "modclean": "^2.0.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "null-loader": "^0.1.1",
-    "react-hot-loader": "^4.6.5",
-    "react-test-renderer": "16.8.1",
-    "redux-devtools": "3.5.0",
-    "redux-devtools-dock-monitor": "^1.1.3",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-logger": "^3.0.0",
-    "source-map-explorer": "^1.5.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.11"
+  "scripts": {
+    "analyze": "source-map-explorer dist/renderer.prod.js dist/renderer.prod.js.map",
+    "build": "npm run build-main && npm run build-renderer",
+    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
+    "clean": "rm -rf node_modules",
+    "coverage": "jest && codecov",
+    "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
+    "init-docs": "gitbook install",
+    "lint": "eslint app test *.js && stylelint \"app/**/*.css\"",
+    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r @babel/register package.js",
+    "package-all": "npm run package -- --all",
+    "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
+    "start": "cross-env NODE_ENV=production electron ./",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./main.development.js",
+    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
+    "test": "jest",
+    "update-docs": "cross-env NODE_PATH=./node_modules/@stdlib/stdlib/lib/node_modules node ./scripts/update_docs.js",
+    "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\""
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "./coverage/",
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/mocks/file_mock.js",
+      "\\.(css|less)$": "<rootDir>/test/mocks/style_mock.js"
+    },
+    "testURL": "http://localhost/"
   },
   "dependencies": {
     "@babel/core": "^7.2.2",
@@ -242,12 +205,49 @@
     "victory": "31.2.0",
     "webpack": "4.29.3"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "babel": "^6.5.2",
+    "babel-eslint": "^10.0.0",
+    "babel-polyfill": "^6.26.0",
+    "codecov": "^3.0.2",
+    "concurrently": "^4.0.0",
+    "del": "^3.0.0",
+    "doctrine": "^3.0.0",
+    "electron": "4.0.4",
+    "electron-packager": "13.0.1",
+    "enzyme": "3.8.0",
+    "eslint": "^5.13.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jest": "^22.2.2",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.1",
+    "gh-pages": "^2.0.0",
+    "gitbook-cli": "^2.3.0",
+    "happypack": "^5.0.1",
+    "hard-source-webpack-plugin": "^0.13.1",
+    "modclean": "^2.0.0",
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "null-loader": "^0.1.1",
+    "react-hot-loader": "^4.6.5",
+    "react-test-renderer": "16.8.1",
+    "redux-devtools": "3.5.0",
+    "redux-devtools-dock-monitor": "^1.1.3",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "redux-logger": "^3.0.0",
+    "source-map-explorer": "^1.5.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-standard": "^18.2.0",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.11"
+  },
+  "devEngines": {
+    "node": "9.x || 10.x || 11.x"
+  },
   "greenkeeper": {
     "ignore": [
       "react-redux"
     ]
   },
-  "devEngines": {
-    "node": "9.x || 10.x || 11.x"
-  }
+  "productName": "ISLE Editor"
 }
