--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,12 @@
     "jest": true
   },
   "rules": {
+    "class-methods-use-this": [ 2, { "exceptMethods": [
+      "render",
+      "componentWillUnmount",
+      "componentDidUpdate",
+      "componentDidMount"
+    ]}],
     "accessor-pairs": [ 2, { "setWithoutGet": true, "getWithoutSet": false } ],
     "array-backet-newline": [ "off", { "multiline": true, "minItems": null } ],
     "array-bracket-spacing": [ "off", {
