--- a/package.json
+++ b/package.json
@@ -148,7 +148,9 @@
     "markdown-it-katex": "^2.0.3",
     "markdown-it-sub": "^1.0.0",
     "minimist": "^1.2.0",
+    "ml-pca": "^2.1.0",
     "moment": "2.24.0",
+    "murmurhash3js": "^3.0.1",
     "node-libs-browser": "^2.2.0",
     "pdfjs-dist": "^2.1.266",
     "pdfmake": "^0.1.50",
@@ -193,6 +195,7 @@
     "socket.io-client": "^2.1.0",
     "source-map-support": "^0.5.10",
     "spectacle": "5.4.0",
+    "stemmer": "^1.0.3",
     "style-loader": "^0.23.0",
     "svg-react-loader": "^0.4.5",
     "terser": "^3.16.1",
