Update lint rule options

--- a/.eslintrc
+++ b/.eslintrc
@@ -75,7 +75,7 @@
     }],
     "id-match": 0,
     "import/no-unresolved": [ 2, {
-      "ignore": [ "electron" ],
+      "ignore": [ "electron", "loader" ],
       "commonjs": true
     }],
     "indent": [ 0, "tab" ],
