--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@babel/register": "^7.0.0",
     "@stdlib/stdlib": "0.0.60",
     "acorn": "^6.1.0",
+    "ajv": "^6.9.2",
     "ansi-to-react": "^5.0.0",
     "archiver": "^3.0.0",
     "autobind-decorator": "^2.2.1",
