Update binomial distribution widget

--- a/app/snippets/components.json
+++ b/app/snippets/components.json
@@ -328,6 +328,10 @@
 		"value":"<LearnMeanVSMedian />\n"
 	},
 	{
+		"name":"LearnBinomialDistribution",
+		"value":"<LearnBinomialDistribution />\n"
+	},
+	{
 		"name":"LearnExponentialDistribution",
 		"value":"<LearnExponentialDistribution />\n"
 	},
