Add plugin and adjust memory limits

--- a/package.json
+++ b/package.json
@@ -55,19 +55,19 @@
   "scripts": {
     "analyze": "source-map-explorer dist/renderer.prod.js dist/renderer.prod.js.map",
     "build": "npm run build-main && npm run build-renderer",
-    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=4096 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
+    "build-main": "cross-env NODE_ENV=production node --max_old_space_size=16384 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.electron.js --progress --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --max_old_space_size=16384 -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.production.js --progress --colors",
     "clean": "rm -rf node_modules",
     "coverage": "jest && codecov",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
     "init-docs": "gitbook install",
     "lint": "eslint app test *.js && stylelint \"app/**/*.css\"",
-    "package": "cross-env NODE_ENV=production node --max-old-space-size=4096 -r @babel/register package.js",
+    "package": "cross-env NODE_ENV=production node --max-old-space-size=16384 -r @babel/register package.js",
     "package-all": "npm run package -- --all",
     "publish-docs": "gitbook build && echo isledocs.com > _book/CNAME && gh-pages --dist _book",
     "start": "cross-env NODE_ENV=production electron ./",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r @babel/register ./main.development.js",
-    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=4096 --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
+    "start-renderer-dev": "cross-env START_HOT=1 NODE_ENV=development node --max-old-space-size=16384 --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config=webpack.config.development.js --mode=development",
     "test": "jest",
     "update-docs": "cross-env NODE_PATH=./node_modules/@stdlib/stdlib/lib/node_modules node ./scripts/update_docs.js",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\""
@@ -91,6 +91,7 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@babel/runtime": "^7.3.4",
     "@stdlib/stdlib": "0.0.60",
     "acorn": "^6.1.0",
     "ajv": "^6.9.2",
@@ -212,6 +213,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "babel": "^6.5.2",
     "babel-eslint": "^10.0.0",
     "babel-polyfill": "^6.26.0",
