--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,9 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    [ "@babel/plugin-transform-runtime", {
+      "regenerator": true
+    }],
     "@babel/plugin-transform-react-jsx",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
