Add component to menu

--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -41,6 +41,7 @@
 		"LearnCrossValidation",
 		"LearnProportionTest",
 		"LearnMeanTest",
+		"LearnBinomialDistribution",
 		"LearnExponentialDistribution",
 		"LearnNormalDistribution",
 		"LearnTDistribution",
