Update jest to alpha version

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "archiver": "^3.0.0",
     "autobind-decorator": "^2.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
+    "babel-jest": "24.2.0-alpha.0",
     "babel-loader": "8.0.5",
     "babel-plugin-module-resolver": "^3.1.2",
     "babel-plugin-transform-modern-regexp": "0.0.6",
