--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "archiver": "^3.0.0",
     "autobind-decorator": "^2.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "24.2.0-alpha.0",
+    "babel-jest": "^24.3.0",
     "babel-loader": "8.0.5",
     "babel-plugin-module-resolver": "^3.1.2",
     "babel-plugin-transform-modern-regexp": "0.0.6",
@@ -135,8 +135,8 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "is-touch-device": "^1.0.1",
-    "jest": "^24.1.0",
-    "jest-cli": "^24.1.0",
+    "jest": "^24.3.0",
+    "jest-cli": "^24.3.0",
     "js-yaml": "^3.12.1",
     "json-loader": "^0.5.4",
     "katex": "^0.10.0",
