--- a/app/snippets/components.json
+++ b/app/snippets/components.json
@@ -8,6 +8,10 @@
 		"value":"<Animated\n\tpreset=\"${1:Enter preset}\"\n>\n</Animated>\n"
 	},
 	{
+		"name":"Background",
+		"value":"<Background\n\tid=\"${1:id}\"\n\ttime={${2:8000}}\n\timageList={[${3:}]}\n\tinTime={${4:3}}\n/>\n"
+	},
+	{
 		"name":"BeaconTooltip",
 		"value":"<BeaconTooltip\n\tcontent=\"${1:Enter content}\"\n\ttitle=\"${2:}\"\n\ttarget=\"${3:}\"\n/>\n"
 	},
