--- a/app/editor-components/editor/components_documentation.json
+++ b/app/editor-components/editor/components_documentation.json
@@ -57,6 +57,47 @@
     ],
     "description": "An ISLE component that allows to apply animation on components and child elements."
   },
+  "Background": {
+    "props": [
+      {
+        "name": "images",
+        "type": "array<string>",
+        "description": "list of image URLs to be displayed",
+        "default": []
+      },
+      {
+        "name": "time",
+        "type": "number",
+        "description": "duration each background image is displayed (in seconds)",
+        "default": 3
+      },
+      {
+        "name": "in",
+        "type": "string",
+        "description": "entrance effect name (either `fade-in`, `slide-left-in`, and `flip-hor-bottom-in`)",
+        "default": "fade-in"
+      },
+      {
+        "name": "out",
+        "type": "string",
+        "description": "exit effect name (either `fade-out`, `slide-right-out`, and `flip-hor-bottom-out`)",
+        "default": "fade-out"
+      },
+      {
+        "name": "inTime",
+        "type": "number",
+        "description": "length of the enter effect (in seconds)",
+        "default": 1
+      },
+      {
+        "name": "outTime",
+        "type": "number",
+        "description": "length of the exit effect (in seconds)",
+        "default": 1
+      }
+    ],
+    "description": "A dynamic background component that changes a background image at a specified interval."
+  },
   "BeaconTooltip": {
     "props": [
       {
