--- a/package.json
+++ b/package.json
@@ -93,13 +93,13 @@
     "@babel/register": "^7.4.0",
     "@babel/runtime": "^7.4.2",
     "@stdlib/stdlib": "0.0.60",
-    "acorn": "^6.1.0",
-    "ajv": "^6.9.2",
+    "acorn": "^6.1.1",
+    "ajv": "^6.10.0",
     "ansi-to-react": "^5.0.0",
     "archiver": "^3.0.0",
     "autobind-decorator": "^2.2.1",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.3.0",
+    "babel-jest": "^24.5.0",
     "babel-loader": "8.0.5",
     "babel-plugin-module-resolver": "^3.1.2",
     "babel-plugin-transform-modern-regexp": "0.0.6",
@@ -116,7 +116,7 @@
     "css": "^2.2.3",
     "css-loader": "^2.1.1",
     "css-modules-require-hook": "^4.2.3",
-    "csv-parse": "^4.3.0",
+    "csv-parse": "^4.3.4",
     "csv-stringify": "^5.2.0",
     "d3": "5.9.2",
     "d3-cloud": "1.2.5",
@@ -125,7 +125,7 @@
     "dompurify": "^1.0.9",
     "electron-window-state": "^5.0.0",
     "element-resize-event": "^3.0.1",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-adapter-react-16": "^1.11.2",
     "file-loader": "^3.0.1",
     "form-data": "^2.2.0",
     "gitbook-plugin-edit-link": "^2.0.2",
@@ -135,11 +135,11 @@
     "history": "^4.9.0",
     "html-webpack-plugin": "^3.2.0",
     "is-touch-device": "^1.0.1",
-    "jest": "^24.3.0",
-    "jest-cli": "^24.3.0",
-    "js-yaml": "^3.12.1",
+    "jest": "^24.5.0",
+    "jest-cli": "^24.5.0",
+    "js-yaml": "^3.13.0",
     "json-loader": "^0.5.4",
-    "katex": "^0.10.0",
+    "katex": "^0.10.1",
     "kernel-smooth": "^0.2.3",
     "localforage": "^1.7.2",
     "lodash.debounce": "^4.0.8",
@@ -155,22 +155,22 @@
     "murmurhash3js": "^3.0.1",
     "node-libs-browser": "^2.2.0",
     "pdfjs-dist": "^2.1.266",
-    "pdfmake": "^0.1.50",
-    "plotly.js": "^1.44.4",
+    "pdfmake": "^0.1.54",
+    "plotly.js": "^1.45.3",
     "pressure": "^2.1.2",
-    "profanities": "^2.10.0",
+    "profanities": "^2.10.2",
     "prop-types": "^15.5.10",
     "raw-loader": "^2.0.0",
     "react": "16.8.5",
-    "react-bootstrap": "^1.0.0-beta.4",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-color": "^2.17.0",
-    "react-contextmenu": "^2.6.5",
+    "react-contextmenu": "^2.11.0",
     "react-copy-to-clipboard": "^5.0.0",
     "react-dates": "20.1.0",
-    "react-dnd": "^7.1.0",
-    "react-dnd-html5-backend": "^7.1.0",
+    "react-dnd": "^7.3.2",
+    "react-dnd-html5-backend": "^7.2.0",
     "react-dom": "16.8.5",
-    "react-draggable": "^3.1.1",
+    "react-draggable": "^3.2.1",
     "react-floater": "^0.6.4",
     "react-grid-layout": "^0.16.6",
     "react-highlight-words": "^0.16.0",
@@ -181,15 +181,15 @@
     "react-monaco-editor": "^0.25.0",
     "react-notification-system": "^0.2.7",
     "react-player": "^1.9.3",
-    "react-plotly.js": "^2.2.0",
+    "react-plotly.js": "^2.3.0",
     "react-redux": "5.1.1",
-    "react-router": "4.4.0",
-    "react-router-dom": "^4.4.0",
+    "react-router": "5.0.0",
+    "react-router-dom": "5.0.0",
     "react-select": "^2.4.2",
     "react-slick": "0.23.2",
     "react-split-pane": "0.1.87",
     "react-table": "6.8.6",
-    "react-transition-group": "^2.5.3",
+    "react-transition-group": "^2.7.0",
     "recordrtc": "^5.5.4",
     "redux": "4.0.1",
     "redux-thunk": "^2.3.0",
@@ -200,7 +200,7 @@
     "stemmer": "^1.0.3",
     "style-loader": "^0.23.0",
     "svg-react-loader": "^0.4.5",
-    "terser": "^3.16.1",
+    "terser": "^3.17.0",
     "turndown": "^5.0.0",
     "turndown-plugin-gfm": "^1.0.2",
     "typo-js": "^1.0.3",
@@ -224,11 +224,11 @@
     "electron": "4.1.1",
     "electron-packager": "13.1.1",
     "enzyme": "3.9.0",
-    "eslint": "^5.15.2",
+    "eslint": "^5.15.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jest": "^22.4.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.4.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "gh-pages": "^2.0.0",
     "gitbook-cli": "^2.3.0",
     "happypack": "^5.0.1",
@@ -246,7 +246,7 @@
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.0"
+    "webpack-dev-server": "^3.2.1"
   },
   "devEngines": {
     "node": "9.x || 10.x || 11.x"
