--- a/package.json
+++ b/package.json
@@ -110,7 +110,6 @@
     "component-raf": "^1.2.0",
     "component-tween": "^1.2.0",
     "compute-chunkify": "0.0.0",
-    "configstore": "^4.0.0",
     "cross-env": "^5.1.5",
     "css": "^2.2.3",
     "css-loader": "^2.1.1",
@@ -122,6 +121,7 @@
     "debug": "^4.1.1",
     "detect-csv": "^1.1.0",
     "dompurify": "^1.0.9",
+    "electron-store": "^3.0.0",
     "electron-window-state": "^5.0.0",
     "element-resize-event": "^3.0.1",
     "file-loader": "^3.0.1",
