--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "form-data": "^2.2.0",
     "highlight.js": "^9.15.6",
     "history": "^4.9.0",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "^3.2.0",
     "is-touch-device": "^1.0.1",
     "js-yaml": "^3.13.0",
     "json-loader": "^0.5.4",
