--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^3.0.0",
     "source-map-explorer": "^1.8.0",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
     "webpack-cli": "^3.3.0",
